--- a/public/common.css
+++ b/public/common.css
@@ -1,9 +1,19 @@
 html {
-	background: #f7f7f7;
-	font-size: 16px;
+  background: #f7f7f7;
+  font-size: 16px;
 }
 
+body {
+  font-family: 'Nunito', sans-serif;
+  position: relative;
+  margin: 0;
+}
 
-#footer {
-	background: rgba(255,255,255,0.8);
+h1 {
+  text-align: center;
+  margin: 0 auto;
+}
+
+a {
+  color: #fff;
 }
